# ade

./: .gitignore  .gitmodules  config.toml  meson.build  readme.md  test.cc  test.sh
module-scripts/: battery.sh  brightness.sh  network.sh  volume.sh
src/: ade.cc  area.hh  atoms.hh  bar.cc  bar.hh  module.hh  notifications.hh  render.hh
